# GoVarlink

./: .gitignore  README.md
cpp/: Makefile  README.md  client.cpp  server.cpp
go/: README.md  go.mod
go/client/: main.go
go/server/: main.go
python/: README.md  client.py  server.py
rust/: Cargo.toml  README.md
test/: README.md  benchmark_compare.py
varlink/: xyz.openbmc_project.Calculator.varlink
xyz/openbmc_project/: Calculator.interface.yaml
