[package]
name = "calculator-varlink-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calculator_server"
path = "src/bin/server.rs"

[[bin]]
name = "calculator_client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
